Projet GL/Projet_GL/src/test/deca/syntax/invalid/circular_include.deca
// Description:
//    fichier inclus lui-même
//
// Resultats:
//    Circular include for file circular_include.deca
//
// Historique:
//    cree le 10/01/2023

#include "circular_include.deca"
